--- a/src/main/resources/templates/html/agregarFigura/agregarDragonBall.html
+++ b/src/main/resources/templates/html/agregarFigura/agregarDragonBall.html
@@ -77,7 +77,11 @@
             <input class="form-control" type="text" id="des" placeholder="Descripción" th:field="*{des}">
             <span th:if="${#fields.hasErrors('des')}" th:errors="*{des}" class="help-block" id="des-error">Errores</span>
         </div>
-
+        <div class="mb-3" th:classappend="${#fields.hasErrors('categoria')} ? 'has-error'">
+            <label class="form-label" for="des">Categoria</label>
+            <input class="form-control" type="text" id="cat" placeholder="Categoria" th:field="*{categoria}">
+            <span th:if="${#fields.hasErrors('categoria')}" th:errors="*{categoria}" class="help-block" id="cat-error">Errores</span>
+        </div>
         <button th:href="@{/figuras/lista}" type="submit" class="btn btn-primary">Enviar</button>
     </form>
 </div>
