--- a/src/main/resources/templates/html/lista.html
+++ b/src/main/resources/templates/html/lista.html
@@ -188,7 +188,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100" src="/imagen/carrusel/carruselNaruto.png" alt="Image">
+                        <img class="w-100" src="/imagen/carrusel/narutoCarrito.jpg" alt="Image">
                         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                             <div class="p-3" style="max-width: 900px;">
 
