--- a/src/main/resources/static/css/figurasEstilosInicio.css
+++ b/src/main/resources/static/css/figurasEstilosInicio.css
@@ -7,6 +7,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    color: white;
+    text-align: center;
+
 }
 
 .figura-contenedor {
@@ -15,17 +18,25 @@ body {
     align-items: flex-start;
     gap: 40px; /* Espacio entre las figuras */
     flex-wrap: wrap; /* Permitir que los elementos se ajusten a la siguiente línea si es necesario */
+
 }
 
 .figura {
+
     text-align: center;
     border: 1px solid #ddd;
     padding: 10px;
     border-radius: 5px;
     max-width: 250px;
+    background-color: rgba(188, 0, 151, 0.8); /* Blanco con 90% de opacidad */
+    color: white; /* Asegura que el texto sea completamente opaco */
+    position: relative;
 }
 
 .figura img {
     max-width: 100%;
     height: auto;
+    display: block;
+    margin: 0 auto;
+    border-radius: 5px;
 }
