--- a/src/main/resources/templates/html/lista.html
+++ b/src/main/resources/templates/html/lista.html
@@ -16,39 +16,20 @@
 
     <style>
         /* Estilo para el texto del nombre de usuario */
-        .nav-item.dropdown .nav-link span.text-primary {
-            transition: color 0.3s;
-            /* Transición suave de color */
-        }
 
-        /* Cambio de color al pasar el ratón sobre el texto */
-        .nav-item.dropdown .nav-link:hover span.text-primary {
-            color: #0056b3;
-            /* Cambio de color al pasar el ratón */
-        }
 
-        .menu {
-            background-color: #f8f9fa;
-            padding: 2rem 0;
-            border-top: 2px solid #dee2e6;
-            border-bottom: 2px solid #dee2e6;
-        }
 
-        .menu h5 {
-            font-weight: bold;
-            color: #343a40;
-        }
 
-        .menu a {
-            text-decoration: none;
-            color: #6c757d;
-            transition: color 0.3s;
-        }
 
-        .menu a:hover {
-            color: #0056b3;
+        body {
+            background-image: url("https://wallpapers-clan.com/wp-content/uploads/2024/03/dragon-ball-goku-sparks-gif-preview-desktop-wallpaper.gif");
+            background-size: cover; /* Asegura que la imagen cubra toda el área del fondo */
+            background-position: center; /* Centra la imagen */
+            background-repeat: no-repeat; /* Evita que la imagen se repita */
+            background-attachment: fixed; /* Hace que la imagen de fondo permanezca fija */
+            height: 100vh; /* Asegura que el cuerpo tenga al menos la altura de la ventana */
+            margin: 0; /* Elimina márgenes alrededor del cuerpo */
         }
-
 
 
     </style>
@@ -160,7 +141,7 @@
     <div class="container" style="margin-top: 110px;">
         <div class="row justify-content-center">
             <div class="col-lg-3 mb-3">
-                <a href="#" class="btn btn-primary btn-lg btn-block">Novedades</a>
+                <a href="/Novedad" class="btn btn-primary btn-lg btn-block">Novedades</a>
             </div>
             <div class="col-lg-3 mb-3">
                 <a href="/OnePiece" class="btn btn-success btn-lg btn-block">One Piece</a>
@@ -179,7 +160,7 @@
             <div id="header-carousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="w-100" src="/imagen/carrusel/onepiece.jpg" alt="Image">
+                        <img class="w-100" src="/imagen/carrusel/onePieceCarrito.jpg" alt="Image">
                         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                             <div class="p-3" style="max-width: 900px;">
 
@@ -197,7 +178,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100" src="/imagen/carrusel/carruselDragonBall.png" alt="Image">
+                        <img class="w-100" src="/imagen/carrusel/dragonBallCarrito.jpg" alt="Image">
                         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                             <div class="p-3" style="max-width: 900px;">
 
@@ -206,7 +187,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100" src="/imagen/carrusel/novedad.png" alt="Image">
+                        <img class="w-100" src="/imagen/carrusel/novedadCarrito.jpg" alt="Image">
                         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                             <div class="p-3" style="max-width: 900px;">
 
@@ -233,7 +214,7 @@
 
 
         <div class="contenedor">
-            <h1>Figuras</h1>
+            <h1 >Figuras</h1>
             <div class="figura-contenedor">
                 <div class="figura" th:each="figura: ${listaFigura}">
                     <a th:href="@{/detalle/{id}(id=${figura.id})}">
@@ -248,134 +229,22 @@
 
         <br>
 
-
         <div class="contenedor">
-            <h1>Novedades</h1>
+            <h1>Figuras Novedad</h1>
             <div class="figura-contenedor">
-                <div class="figura" th:each="novedad: ${novedadFigura}">
-                    <a th:href="@{/detalle/novedad/{id}(id=${novedad.id})}">
-                        <img th:src="${novedad.url}" alt="imagen">
+                <div class="figura" th:each="figura: ${listaNovedad}">
+                    <a th:href="@{/detalle/{id}(id=${figura.id})}">
+                        <img th:src="${figura.url}" alt="imagen">
                     </a>
-                    <h2 th:text="${novedad.nombre}"></h2>
-                    <p th:text="${novedad.arco?.nombre}" ></p>
-                    <p>Precio: <span class="price" th:text="${novedad.precio}"></span></p>
+                    <h2 th:text="${figura.nombre}"></h2>
+                    <p th:text="${figura.arco?.nombre}"></p>
+                    <p>Precio: <span class="price" th:text="${figura.precio}"></span></p>
                 </div>
             </div>
         </div>
 
-
-
-
-        <!-- ahora desde aqui empieza la creacion de las figuras -->
-        <!-- Hacer con html y css-->
-
-  <!--      <div class="container">
-            <div class="card-container">
-                <div class="card">
-                    <div class="card-header">
-                        <h3>Lista de Figuras</h3>
-                    </div>
-                    <div class="card-body">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th>Imagen</th>
-                                    <th>Nombre</th>
-                                    <th>Arco</th>
-                                    <th>Descripción</th>
-                                    <th>Precio</th>
-                                    <th>Inspeccionar</th>
-                                    <th>Compra</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr th:each="figura: ${listaFigura}">
-                                    <td><img th:src="${figura.url}" alt="imagen"></td>
-                                    <td th:text="${figura.nombre}">Nombre</td>
-                                    <td th:text="${figura.arco?.nombre}">Arco</td>
-                                    <td th:text="${figura.des}">Descripción</td>
-                                    <td th:text="${figura.precio}">Precio</td>
-                                    <td>
-                                        <a th:href="@{/detalle/{id}(id=${figura.id})}">
-                                            <button type="button" class="boton btn-comprar">Información</button>
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a th:href="@{/comprar(id=${figura.id})}">
-                                            <button type="button" class="boton btn-comprar">Comprar</button>
-                                        </a>
-                                    </td>
-
-                                    <td>
-                                        <div>
-                                            <i class="bi bi-suit-heart" style="font-size: 30px"></i>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>-->
-
+    </div>
 <!--
-        <br>
-
-        <div class="container">
-            <div class="card-container">
-                <div class="card">
-                    <div class="card-header">
-                        <h3>Novedad de la semana</h3>
-                    </div>
-                    <div class="card-body">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th>Imagen</th>
-                                    <th>Nombre</th>
-                                    <th>Arco</th>
-                                    <th>Descripción</th>
-                                    <th>Precio</th>
-                                    <th>Compra</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr th:each="novedad:${novedadFigura}">
-                                    <td><img th:src="${novedad.url}" alt="imagen"></td>
-                                    <td th:text="${novedad.nombre}">Nombre</td>
-                                    <td th:text="${novedad.arco?.nombre}">Arco</td>
-                                    <td th:text="${novedad.des}">Descripción</td>
-                                    <td th:text="${novedad.precio}">Precio</td>
-                                    <td>
-                                        <a th:href="@{/detalle/novedad/{id}(id=${novedad.id})}">
-                                            <button type="button" class="boton btn-comprar">Información</button>
-                                        </a>
-
-                                    </td>
-                                    <td>
-                                        &lt;!&ndash;<input class="form-check-input" type="checkbox" id="compra">
-
-                                        <label class="form-check-label" for="compra">Compra</label> &ndash;&gt;
-                                        <a href="">
-
-                                            <button type="button" class="boton btn-comprar">Comprar</button>
-                                        </a>
-
-                                    </td>
-                                    <td>
-                                        <div>
-                                            <i class="bi bi-suit-heart" style="font-size: 30px"></i>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>-->
-
 
         <div class="menu bg-light py-5">
             <div class="container">
@@ -447,9 +316,9 @@
                         </ul>
                     </div>
                 </div>
-            </div>ç
+            </div>
         </div>
-    </div>
+    </div>-->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
