--- a/src/main/resources/templates/html/dragonBall/index.html
+++ b/src/main/resources/templates/html/dragonBall/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="/imagen/pestaña/corona.jpg" >
 
 
-    <style>
+   <!-- <style>
 
 
         body {
@@ -25,7 +25,7 @@
             height: 100vh; /* Asegura que el cuerpo tenga al menos la altura de la ventana */
             margin: 0; /* Elimina márgenes alrededor del cuerpo */
         }
-    </style>
+    </style>-->
 </head>
 
 <body>
