--- a/src/main/resources/templates/html/lista.html
+++ b/src/main/resources/templates/html/lista.html
@@ -20,16 +20,16 @@
 
 
 
-
+/*
         body {
             background-image: url("https://wallpapers-clan.com/wp-content/uploads/2024/03/dragon-ball-goku-sparks-gif-preview-desktop-wallpaper.gif");
-            background-size: cover; /* Asegura que la imagen cubra toda el área del fondo */
-            background-position: center; /* Centra la imagen */
-            background-repeat: no-repeat; /* Evita que la imagen se repita */
-            background-attachment: fixed; /* Hace que la imagen de fondo permanezca fija */
-            height: 100vh; /* Asegura que el cuerpo tenga al menos la altura de la ventana */
-            margin: 0; /* Elimina márgenes alrededor del cuerpo */
-        }
+            background-size: cover; !* Asegura que la imagen cubra toda el área del fondo *!
+            background-position: center; !* Centra la imagen *!
+            background-repeat: no-repeat; !* Evita que la imagen se repita *!
+            background-attachment: fixed; !* Hace que la imagen de fondo permanezca fija *!
+            height: 100vh; !* Asegura que el cuerpo tenga al menos la altura de la ventana *!
+            margin: 0; !* Elimina márgenes alrededor del cuerpo *!
+        }*/
 
 
     </style>
@@ -88,6 +88,9 @@
                                     <hr class="dropdown-divider">
                                 </li>
                                 <li sec:authorize="hasRole('ROLE_ADMIN')"><a href="/admin/pagina" class="nav-link px-2 text-secondary">Monitorizar pagina</a>
+                                </li>
+                                <hr class="dropdown-divider">
+                                <li sec:authorize="hasRole('ROLE_ADMIN')"><a href="/admin/usuario" class="nav-link px-2 text-secondary">Usuario pagina</a>
                                 </li>
 
                                 <li>
@@ -244,7 +247,7 @@
         </div>
 
     </div>
-<!--
+
 
         <div class="menu bg-light py-5">
             <div class="container">
@@ -318,7 +321,7 @@
                 </div>
             </div>
         </div>
-    </div>-->
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
