--- a/src/main/resources/templates/html/adminMonitorizar/adminMeterFigura.html
+++ b/src/main/resources/templates/html/adminMonitorizar/adminMeterFigura.html
@@ -103,6 +103,7 @@
                 </li>
                 <li><a href="/admin/meter/figura" class="nav-link px-2 text-secondary">Agregar figura</a></li>
                 <li><a href="/admin/pagina" class="nav-link px-2 text-secondary">Monitorizar pagina</a></li>
+                <li><a href="/admin/usuario" class="nav-link px-2 text-secondary">Administrar usuarios</a></li>
             </ul>
 
             <form th:action="@{/usuario/logout}" method="post">
@@ -120,10 +121,10 @@
             <h1>Añadir figuras</h1>
             <div class="btn-container">
                 <a href="/figuras/new" class="btn-dark-custom">Agregar Figura</a>
-                <a href="/figuras/novedad/new" class="btn-dark-custom">Agregar Novedad</a>
+              <!--  <a href="/figuras/novedad/new" class="btn-dark-custom">Agregar Novedad</a>
                 <a href="/figuras/dragonBall/new" class="btn-dark-custom">Agregar Dragon Ball</a>
                 <a href="/figuras/onePiece/new" class="btn-dark-custom">Agregar One Piece</a>
-                <a href="/figuras/naruto/new" class="btn-dark-custom">Agregar Naruto</a>
+                <a href="/figuras/naruto/new" class="btn-dark-custom">Agregar Naruto</a>-->
             </div>
         </div>
     </div>
