--- a/src/main/resources/templates/html/adminMonitorizar/adminUsuario.html
+++ b/src/main/resources/templates/html/adminMonitorizar/adminUsuario.html
@@ -13,56 +13,13 @@
     <link rel="stylesheet" href="/css/figurasEstilosInicio.css">
     <style>
         /* Estilo personalizado */
-        .admin-page {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 40px 20px;
-            background-color: #f8f9fa;
-        }
-
-        .admin-container {
-            max-width: 600px;
-            width: 100%;
-            padding: 20px;
-            border-radius: 10px;
-            background-color: #fff;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .admin-header {
-            text-align: center;
-            margin-bottom: 20px;
-        }
 
         .admin-header img {
             width: 100px;
             margin-bottom: 20px;
         }
 
-        .btn-dark-custom {
-            background-color: #000;
-            border: none;
-            color: #fff;
-            margin: 10px 0;
-            padding: 10px 20px;
-            width: 100%;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-            text-decoration: none;
-        }
 
-        .btn-dark-custom:hover {
-            background-color: #555;
-        }
-
-        .btn-container {
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
-        }
 
         .btn-container .btn-dark-custom {
             margin: 10px;
@@ -107,6 +64,7 @@
                 </li>
                 <li><a href="/admin/meter/figura" class="nav-link px-2 text-secondary">Agregar figura</a></li>
                 <li><a href="/admin/pagina" class="nav-link px-2 text-secondary">Monitorizar pagina</a></li>
+                <li><a href="/admin/usuario" class="nav-link px-2 text-secondary">Administrar usuarios</a></li>
             </ul>
 
             <form th:action="@{/usuario/logout}" method="post">
@@ -117,21 +75,80 @@
 </header>
 
 
-<div class="contenedor" style="margin-top: 110px;">
-    <h1 >Usuarios</h1>
-    <div class="figura-contenedor">
-        <div class="figura" th:each="usuarios: ${usuario}">
-            <h2 th:text="${usuarios.username}"></h2>
-            <p th:text="${usuarios.email}" ></p>
 
-            <a class="button" th:href="@{/edit/usuario/{id}(id=${usuarios.id})}">Editar</a>
 
-            <a class="button" th:href="@{/figuras/delete/{id}(id=${usuarios.id})}">Borrar</a>
+<div class="container">
+    <div class="card-container" style="margin-top: 110px;">
+        <div class="card">
+            <div class="card-header">
+                <h3>Lista de Usuarios</h3>
+            </div>
+            <div class="card-body">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>Usuario</th>
+                        <th>Username</th>
+                        <th>Fecha </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="usuarios: ${usuario}">
+                        <td th:text="${usuarios.username}">Nombre</td>
+                        <td th:text="${usuarios.email}">Arco</td>
+                        <td th:text="${usuarios.fechaAlta}">Fecha</td>
+                        <td>
+                            <a th:href="@{/edit/usuario/{id}(id=${usuarios.id})}">
 
+                                <button type="button" class="boton btn-comprar">Editar</button>
+                            </a>
+
+                        </td>
+                        <td>
+                            <a th:href="@{/figuras/delete/{id}(id=${usuarios.id})}">
+                                <button type="button" class="boton btn-comprar">Borrar</button>
+                            </a>
+
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+<!--    Esta bien echo pero hast que no haya datos no se ve nada -->
+    <div class="card-container" style="margin-top: 110px;">
+        <div class="card">
+            <div class="card-header">
+                <h3>Lista de Ventas</h3>
+            </div>
+            <div class="card-body">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Figuras compradas</th>
+                        <th>Precio total</th>
+                        <th>Datos vivienda</th>
+                        <th>Fecha compra</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="venta: ${ventas}">
+                        <td th:text="${venta.nombre}">Nombre</td>
+                        <td th:text="${venta.figuraComprada}">Figura comprada</td>
+                        <td th:text="${venta.precioTotal}">Precio total</td>
+                        <td th:text="${venta.datosVivienda}">Datos vivienda</td>
+                        <td th:text="${venta.fechaCompra}">Fecha compra</td>
+
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
-
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
