--- a/src/main/resources/templates/html/editarFigura/editarFigura.html
+++ b/src/main/resources/templates/html/editarFigura/editarFigura.html
@@ -1,92 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Agregar cancion</title>
-
+    <title>Agregar Canción</title>
     <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
-    <link rel="icon" href="/imagen/pestaña/corona.jpg" >
+    <link rel="icon" href="/imagen/pestaña/corona.jpg">
+    <style>
+        body {
+            background-color: #f8f9fa;
+            font-family: Arial, sans-serif;
+        }
 
+        .form-container {
+            max-width: 700px;
+            margin: 60px auto;
+            padding: 30px;
+            background-color: #ffffff;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            border-radius: 15px;
+        }
+
+        .form-container h4 {
+            margin-bottom: 30px;
+            text-align: center;
+            font-size: 1.5rem;
+            color: #343a40;
+        }
+
+        .form-label {
+            font-weight: 600;
+            color: #495057;
+        }
+
+        .form-control {
+            border-radius: 8px;
+        }
+
+        .has-error .form-control {
+            border-color: #dc3545;
+        }
+
+        .has-error .help-block {
+            color: #dc3545;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+            border-radius: 8px;
+            padding: 10px 20px;
+            font-size: 1rem;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #0056b3;
+        }
+
+        .input-group {
+            margin-bottom: 1.5rem;
+        }
+        .form-header {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .form-header img {
+            max-width: 150px;
+            margin-bottom: 20px;
+        }
+        .form-header h4 {
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
+
 <body>
-<h4>Agregar</h4>
-<form method="post" action="#"
-      th:action="@{/edit/submit}"
-      th:object="${figura}">
+
+<div class="container form-container">
+    <div class="form-header">
+        <img src="/imagen/encabezado/calabera.png" alt="Logo de la Página Web">
+        <h4>Editar elemento</h4>
+    </div>
+    <form method="post" action="#" th:action="@{/edit/submit}" th:object="${figura}">
         <input type="hidden" th:field="*{id}">
 
-    <!--<div class="input-group mb-3" sec:authorize="hasRole('ROLE_ADMIN')"
-         th:classappend="${#fields.hasErrors('id')} ? 'has-error'">
-        <label class="form-label" for="id" >Id</label>
-        <input class="form-control" type="number" id="id" th:field="*{id}"
-               th:attrappend="readonly=${cancionDTO.id != null and modoEdicion} ? 'readonly' : null"/>
-        <span th:if="${#fields.hasErrors('id')}" th:errors="*{id}" class="text-danger"></span>
-    </div>-->
-
-    <h4 >Agregar elemento</h4>
-    <div>
-        <div class="input-group mb-3"
-             th:classappend="${#fields.hasErrors('url')} ? 'has-error'">
-
-            <label class="form-label" for="url" > url</label>
-            <input class="form-control" type="text" id="url" placeholder="url" th:field="*{url}" />
-            <span th:if="${#fields.hasErrors('url')}" th:errors="*{url}"
-                  class="help-block" id="url-error">Errores</span>
-
-
-        </div>
-
-        <div class="input-group mb-3"
-             th:classappend="${#fields.hasErrors('id')} ? 'has-error'">
-            <label class="form-label" for="id" >Id</label>
-            <input class="form-control" type="text" id="id" placeholder="Id" th:field="*{id}">
-            <span th:if="${#fields.hasErrors('id')}" th:errors="*{id}"
-                  class="help-block" id="id-error">Errores</span>
-
-        </div>
-        <div class="input-group mb-3"
-             th:classappend="${#fields.hasErrors('nombre')} ? 'has-error'">
-            <label class="form-label" for="nombre" >Nombre</label>
-            <input class="form-control" type="text" id="nombre" placeholder="Nombre" th:field="*{nombre}" />
-
-            <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"
-                  class="help-block" id="nombre-error">Errores</span>
-
-        </div>
-
-        <div class="input-group mb-3"
-             th:classappend="${#fields.hasErrors('arco')} ? 'has-error'">
-            <label class="form-label" for="arco" >Arco</label>
-            <input class="form-control" type="text" id="arco" placeholder="Apellido" th:field="*{arco}" />
-            <span th:if="${#fields.hasErrors('arco')}" th:errors="*{arco}"
-                  class="help-block" id="arco-error">Errores</span>
-
+        <div class="mb-3" th:classappend="${#fields.hasErrors('url')} ? 'has-error'">
+            <label class="form-label" for="url">URL</label>
+            <input class="form-control" type="text" id="url" placeholder="URL" th:field="*{url}">
+            <span th:if="${#fields.hasErrors('url')}" th:errors="*{url}" class="help-block" id="url-error">Errores</span>
         </div>
 
 
 
-        <div class="input-group mb-3"
-             th:classappend="${#fields.hasErrors('precio')} ? 'has-error'">
-            <label class="form-label" for="precio" >Precio</label>
-            <input class="form-control" type="number" id="precio" placeholder="Precio" th:field="*{precio}" />
-            <span th:if="${#fields.hasErrors('precio')}" th:errors="*{precio}"
-                  class="help-block" id="precio-error">Errores</span>
-
+        <div class="mb-3" th:classappend="${#fields.hasErrors('nombre')} ? 'has-error'">
+            <label class="form-label" for="nombre">Nombre</label>
+            <input class="form-control" type="text" id="nombre" placeholder="Nombre" th:field="*{nombre}">
+            <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="help-block" id="nombre-error">Errores</span>
         </div>
 
-        <div class="input-group mb-3"
-             th:classappend="${#fields.hasErrors('des')} ? 'has-error'">
-            <label class="form-label" for="des" >Descripción</label>
-            <input class="form-control" type="text" id="des" placeholder="Descripción" th:field="*{des}" />
-            <span th:if="${#fields.hasErrors('des')}" th:errors="*{des}"
-                  class="help-block" id="des-error">Errores</span>
-
+        <div class="mb-3" th:classappend="${#fields.hasErrors('arco')} ? 'has-error'">
+            <label class="form-label" for="arco">Arco</label>
+            <input class="form-control" type="text" id="arco" placeholder="Arco" th:field="*{arco}">
+            <span th:if="${#fields.hasErrors('arco')}" th:errors="*{arco}" class="help-block" id="arco-error">Errores</span>
         </div>
-    </div>
 
-    <button th:href="@{/figuras/lista}" type="submit" class="btn btn-primary">Enviar</button>
-</form>
+        <div class="mb-3" th:classappend="${#fields.hasErrors('precio')} ? 'has-error'">
+            <label class="form-label" for="precio">Precio</label>
+            <input class="form-control" type="number" id="precio" placeholder="Precio" th:field="*{precio}">
+            <span th:if="${#fields.hasErrors('precio')}" th:errors="*{precio}" class="help-block" id="precio-error">Errores</span>
+        </div>
 
-<script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}" ></script>
+        <div class="mb-3" th:classappend="${#fields.hasErrors('des')} ? 'has-error'">
+            <label class="form-label" for="des">Descripción</label>
+            <input class="form-control" type="text" id="des" placeholder="Descripción" th:field="*{des}">
+            <span th:if="${#fields.hasErrors('des')}" th:errors="*{des}" class="help-block" id="des-error">Errores</span>
+        </div>
+
+
+        <div class="mb-3" th:classappend="${#fields.hasErrors('categoria')} ? 'has-error'">
+            <label class="form-label" for="des">Categoria</label>
+            <input class="form-control" type="text" id="cat" placeholder="Categoria" th:field="*{categoria}">
+            <span th:if="${#fields.hasErrors('categoria')}" th:errors="*{categoria}" class="help-block" id="cat-error">Errores</span>
+        </div>
+
+        <div class="mb-3" th:classappend="${#fields.hasErrors('stock')} ? 'has-error'">
+            <label class="form-label" for="des">stock</label>
+            <input class="form-control" type="text" id="stock" placeholder="stock" th:field="*{stock}">
+            <span th:if="${#fields.hasErrors('stock')}" th:errors="*{stock}" class="help-block" id="stock-error">Errores</span>
+        </div>
+
+        <div class="mb-3" th:classappend="${#fields.hasErrors('fecha_introducida')} ? 'has-error'">
+            <label class="form-label" for="des">fecha_introducida</label>
+            <input class="form-control" type="text" id="fecha_introducida" placeholder="Fecha" th:field="*{fecha_introducida}">
+            <span th:if="${#fields.hasErrors('stock')}" th:errors="*{fecha_introducida}" class="help-block" id="fecha_introducida-error">Errores</span>
+        </div>
+
+        <div class="text-center">
+            <button type="submit" class="btn btn-primary">Enviar</button>
+        </div>
+    </form>
+</div>
+
+<script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
 </body>
+
 </html>
