--- a/src/main/resources/templates/html/lista.html
+++ b/src/main/resources/templates/html/lista.html
@@ -17,19 +17,53 @@
     <style>
         /* Estilo para el texto del nombre de usuario */
 
+        footer {
+            background-color: #343a40;
+            color: #ffffff;
+            padding: 20px 0;
+        }
+
+        footer h5 {
+            margin-bottom: 20px;
+        }
+
+        footer ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        footer ul li {
+            margin-bottom: 10px;
+        }
+
+        footer ul li a {
+            color: #ffffff;
+            text-decoration: none;
+            transition: color 0.2s;
+        }
+
+        footer ul li a:hover {
+            color: #f8f9fa;
+        }
+
+        footer .text-center {
+            border-top: 1px solid #495057;
+            margin-top: 20px;
+            padding-top: 20px;
+        }
 
 
 
-/*
-        body {
-            background-image: url("https://wallpapers-clan.com/wp-content/uploads/2024/03/dragon-ball-goku-sparks-gif-preview-desktop-wallpaper.gif");
-            background-size: cover; !* Asegura que la imagen cubra toda el área del fondo *!
-            background-position: center; !* Centra la imagen *!
-            background-repeat: no-repeat; !* Evita que la imagen se repita *!
-            background-attachment: fixed; !* Hace que la imagen de fondo permanezca fija *!
-            height: 100vh; !* Asegura que el cuerpo tenga al menos la altura de la ventana *!
-            margin: 0; !* Elimina márgenes alrededor del cuerpo *!
-        }*/
+        /*
+                body {
+                    background-image: url("https://wallpapers-clan.com/wp-content/uploads/2024/03/dragon-ball-goku-sparks-gif-preview-desktop-wallpaper.gif");
+                    background-size: cover; !* Asegura que la imagen cubra toda el área del fondo *!
+                    background-position: center; !* Centra la imagen *!
+                    background-repeat: no-repeat; !* Evita que la imagen se repita *!
+                    background-attachment: fixed; !* Hace que la imagen de fondo permanezca fija *!
+                    height: 100vh; !* Asegura que el cuerpo tenga al menos la altura de la ventana *!
+                    margin: 0; !* Elimina márgenes alrededor del cuerpo *!
+                }*/
 
 
     </style>
@@ -248,80 +282,49 @@
 
     </div>
 
+    
 
-        <div class="menu bg-light py-5">
-            <div class="container">
-                <div class="menuTitulo text-center mb-4">
-                    <h2 class="text-uppercase">Menú</h2>
+    <footer class="bg-dark text-white mt-4">
+        <div class="container py-4">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <h5>Acerca de</h5>
+                    <p class="small">Somos una tienda dedicada a la venta de figuras de tus series favoritas. Nuestro objetivo es ofrecer productos de alta calidad y un excelente servicio al cliente.</p>
                 </div>
-                <div class="row">
-                    <div class="col-lg-2 col-md-4 col-sm-6 mb-4">
-                        <h5 class="text-dark mb-3">Por qué comprar</h5>
-                        <ul class="list-unstyled">
-                            <li><a href="#" class="text-secondary">Cómo comprar</a></li>
-                            <li><a href="#" class="text-secondary">Formas de pago</a></li>
-                            <li><a href="#" class="text-secondary">Gastos de envío</a></li>
-                            <li><a href="#" class="text-secondary">Cupones descuento</a></li>
-                            <li><a href="#" class="text-secondary">Preguntas frecuentes</a></li>
-                            <li><a href="#" class="text-secondary">Opiniones de clientes</a></li>
-                            <li><a href="#" class="text-secondary">Tarjetas regalo</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-2 col-md-4 col-sm-6 mb-4">
-                        <h5 class="text-dark mb-3">Quiénes somos</h5>
-                        <ul class="list-unstyled">
-                            <li><a href="#" class="text-secondary">Compromisos</a></li>
-                            <li><a href="#" class="text-secondary">Nuestras tiendas</a></li>
-                            <li><a href="#" class="text-secondary">Nuestras Marcas</a></li>
-                            <li><a href="#" class="text-secondary">Condiciones de compra</a></li>
-                            <li><a href="#" class="text-secondary">Afiliados</a></li>
-                            <li><a href="#" class="text-secondary">Aviso legal</a></li>
-                            <li><a href="#" class="text-secondary">Privacidad</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-2 col-md-4 col-sm-6 mb-4">
-                        <h5 class="text-dark mb-3">Contactar</h5>
-                        <ul class="list-unstyled">
-                            <li><a href="#" class="text-secondary">Centro de soporte</a></li>
-                            <li><a href="#" class="text-secondary">Devoluciones y Garantías</a></li>
-                            <li><a href="#" class="text-secondary">Wiki PcComponentes</a></li>
-                            <li><a href="#" class="text-secondary">Opina y Gana</a></li>
-                            <li><a href="#" class="text-secondary">Publicidad</a></li>
-                            <li><a href="#" class="text-secondary">Trabaja con nosotros</a></li>
-                            <li><a href="#" class="text-secondary">Políticas de cookies</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-2 col-md-4 col-sm-6 mb-4">
-                        <h5 class="text-dark mb-3">Otros</h5>
-                        <ul class="list-unstyled">
-                            <li><a href="#" class="text-secondary">Replay</a></li>
-                            <li><a href="#" class="text-secondary">Black Friday</a></li>
-                            <li><a href="#" class="text-secondary">Cyber Monday</a></li>
-                            <li><a href="#" class="text-secondary">PcDays</a></li>
-                            <li><a href="#" class="text-secondary">Marketplace</a></li>
-                            <li><a href="#" class="text-secondary">Servicio logístico Fulfilment</a></li>
-                            <li><a href="#" class="text-secondary">Servicio de reparaciones</a></li>
-                            <li><a href="#" class="text-secondary">Concurso</a></li>
-                            <li><a href="#" class="text-secondary">Cita asistencia técnica</a></li>
-                            <li><a href="#" class="text-secondary">Responsabilidad social</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-2 col-md-4 col-sm-6 mb-4">
-                        <h5 class="text-dark mb-3">Comunidad</h5>
-                        <ul class="list-unstyled">
-                            <li><a href="#" class="text-secondary">Instagram</a></li>
-                            <li><a href="#" class="text-secondary">Twitter</a></li>
-                            <li><a href="#" class="text-secondary">Facebook</a></li>
-                            <li><a href="#" class="text-secondary">Telegram</a></li>
-                            <li><a href="#" class="text-secondary">Youtube</a></li>
-                            <li><a href="#" class="text-secondary">TikTok</a></li>
-                            <li><a href="#" class="text-secondary">Twitch</a></li>
-                        </ul>
-                    </div>
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <h5>Enlaces rápidos</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="/inicio" class="text-white">Inicio</a></li>
+                        <li><a href="/caracteristicas" class="text-white">Características</a></li>
+                        <li><a href="/pagoEnca" class="text-white">Precios</a></li>
+                        <li><a href="/faqs" class="text-white">FAQs</a></li>
+                        <li><a href="/encabezado" class="text-white">Acerca</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <h5>Soporte</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="text-white">Centro de soporte</a></li>
+                        <li><a href="#" class="text-white">Devoluciones y Garantías</a></li>
+                        <li><a href="#" class="text-white">Contactar</a></li>
+                        <li><a href="#" class="text-white">Política de privacidad</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <h5>Redes sociales</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="text-white"><i class="bi bi-instagram"></i> Instagram</a></li>
+                        <li><a href="#" class="text-white"><i class="bi bi-twitter"></i> Twitter</a></li>
+                        <li><a href="#" class="text-white"><i class="bi bi-facebook"></i> Facebook</a></li>
+                        <li><a href="#" class="text-white"><i class="bi bi-youtube"></i> YouTube</a></li>
+                    </ul>
                 </div>
             </div>
+            <div class="text-center">
+                <p class="small mb-0">&copy; 2024 Tu Tienda de Figuras. Todos los derechos reservados.</p>
+            </div>
         </div>
-    </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
