--- a/src/main/resources/templates/html/encabezado/precios.html
+++ b/src/main/resources/templates/html/encabezado/precios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Precios</title>
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="icon" href="/imagen/pestaña/corona.jpg" >
 </head>
-<body>
-<header class="p-3 bg-dark text-white fixed-top ">
+<body>   <header class="p-3 bg-dark text-white fixed-top ">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -33,16 +32,17 @@
                            placeholder="Buscar..." name="nombre">
                 </form>
             </div>
-            <div class="d-inline-flex align-items-center" id="addToCart" style="margin-right: 20px;">
-                <i class="bi bi-save"></i>
+
+            <div class="d-inline-flex align-items-center" id="addToCart" style="margin-right: 20px;" data-id="${figura.id}" onclick="addFavoriteProduct(${figura.id})">
+                <i class="bi bi-bookmark bi-heart${figura.enFavoritos ? ' text-danger' : ''}"></i>
             </div>
 
             <div>
 
                 <div th:if="${#authorization.expression('!isAuthenticated()')}">
                     <div class="d-flex justify-content-end">
-                        <a href="/inicioSesion/login" class="btn btn-outline-light me-2">Iniciar sesión</a>
-                        <a href="/usuario/signup" class="btn btn-warning">Registrar</a>
+                        <a th:href="@{/aaa}" class="btn btn-outline-light me-2">Iniciar sesión</a>
+                        <a th:href="@{/usuario/signup}" class="btn btn-warning">Registrar</a>
                     </div>
                 </div>
                 <ul style="margin-top: auto" class="nav ">
@@ -55,14 +55,18 @@
                                 </span>
                         </a>
 
-                        <ul class="dropdown-menu">
-                            <li><a href="/admin/meter/figura" class="nav-link px-2 text-secondary">Agregar
+                        <ul class="dropdown-menu"  >
+                            <li sec:authorize="hasRole('ROLE_ADMIN')"><a href="/admin/meter/figura" class="nav-link px-2 text-secondary">Agregar
                                 figura</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a href="/admin/pagina" class="nav-link px-2 text-secondary">Monitorizar pagina</a>
+                            <li sec:authorize="hasRole('ROLE_ADMIN')"><a href="/admin/pagina" class="nav-link px-2 text-secondary">Monitorizar pagina</a>
                             </li>
+                            <hr class="dropdown-divider">
+                            <li sec:authorize="hasRole('ROLE_ADMIN')"><a href="/admin/usuario" class="nav-link px-2 text-secondary">Usuario pagina</a>
+                            </li>
+
                             <li>
                                 <form th:action="@{/usuario/logout}" method="post">
                                     <button type="submit" class="btn btn-danger">Salir</button>
@@ -87,19 +91,23 @@
                 <div id="cartTotal">Total: $0.00</div>
                 <button id="btnComprar">Comprar</button>
             </div>
-            <!--   Son para que te cuentes los inicios de sesion est atambien puesto arriba
-      <div  sec:authorize="hasRole('ROLE_ADMIN')" >
+            <!--   Son para que te cuentes los inicios de sesion est atambien puesto arriba-->
+            <!--    <div  sec:authorize="hasRole('ROLE_ADMIN')" >
 
-               <span class="dropdown-item" th:text=" ' App: ' + ${session.numVisitasApp}"></span>
+                    <h1>hola mundo</h1>
+
+                         <span class="dropdown-item" th:text=" ' App: ' + ${session.numVisitasApp}"></span>
 
 
-               <span class="dropdown-item" th:text=" ' index: ' + ${session.numVisitasIndex}"></span>
-       </div> -->
+                         <span class="dropdown-item" th:text=" ' index: ' + ${session.numVisitasIndex}"></span>
+                 </div>
+                  </div>-->
+
+
+
+
         </div>
-
-
-
-
+    </div>
     </div>
 </header>
 
