--- a/src/main/resources/templates/html/novedad/index.html
+++ b/src/main/resources/templates/html/novedad/index.html
@@ -65,6 +65,9 @@
                             </li>
                             <li sec:authorize="hasRole('ROLE_ADMIN')"><a href="/admin/pagina" class="nav-link px-2 text-secondary">Monitorizar pagina</a>
                             </li>
+                            <hr class="dropdown-divider">
+                            <li sec:authorize="hasRole('ROLE_ADMIN')"><a href="/admin/usuario" class="nav-link px-2 text-secondary">Usuario pagina</a>
+                            </li>
 
                             <li>
                                 <form th:action="@{/usuario/logout}" method="post">
@@ -109,7 +112,6 @@
     </div>
     </div>
 </header>
-
 
 <div class="contenedor">
     <h1>Novedades</h1>
