--- a/src/main/resources/templates/html/inspeccionar/inspeccionar.html
+++ b/src/main/resources/templates/html/inspeccionar/inspeccionar.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/inspeccionar.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/caja-boostrap.css">
+    <link rel="stylesheet" href="/css/comprarCarrito.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="icon" href="/imagen/pestaña/corona.jpg" >
 
@@ -80,8 +81,7 @@
                     <i class="bi bi-cart"></i>
                     <span id="cartItemCount">0</span>
                 </div>
-
-                <div id="cartContainer" class="cart-container" style="display: none;">
+                <div id="cartContainer" class="cart-container">
                     <h2>Carrito de Compras</h2>
                     <ul id="cartItems"></ul>
                     <div id="cartTotal">Total: $0.00</div>
@@ -103,7 +103,6 @@
         </div>
     </header>
     <div style="margin-top: 100px;">
-
         <h1>Detalle de Figura</h1>
         <div class="figure-details">
             <img th:src="${figura.url}" alt="imagen">
@@ -114,13 +113,16 @@
                 No hay stock
             </div>
             <div th:unless="${figura.getStock() <= 0}">
-                <a th:href="@{/comprar(id=${figura.id})}">
-                    <button type="button" class="boton btn-comprar">Comprar</button>
-                </a>
+                <button type="button" class="boton btn-comprar"
+                        data-figura-id="${figura.id}"
+                        data-figura-nombre="${figura.nombre}"
+                        data-figura-precio="${figura.precio}">
+                    Añadir al carrito
+                </button>
             </div>
-
         </div>
     </div>
+
 
 
 
@@ -128,6 +130,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+    <script src="/js/carritoComprar.js"></script>
 </body>
 
 </html>
