--- a/src/main/resources/templates/html/onePiece/index.html
+++ b/src/main/resources/templates/html/onePiece/index.html
@@ -177,86 +177,47 @@
 
 
 
-    <div class="menu">
-        <div class="menuTitulo">
-            <h2>Menú</h2>
+<footer class="bg-dark text-white mt-4">
+    <div class="container py-4">
+        <div class="row">
+            <div class="col-lg-3 col-md-6 mb-4">
+                <h5>Acerca de</h5>
+                <p class="small">Somos una tienda dedicada a la venta de figuras de tus series favoritas. Nuestro objetivo es ofrecer productos de alta calidad y un excelente servicio al cliente.</p>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <h5>Enlaces rápidos</h5>
+                <ul class="list-unstyled">
+                    <li><a href="/inicio" class="text-white">Inicio</a></li>
+                    <li><a href="/caracteristicas" class="text-white">Características</a></li>
+                    <li><a href="/pagoEnca" class="text-white">Precios</a></li>
+                    <li><a href="/faqs" class="text-white">FAQs</a></li>
+                    <li><a href="/encabezado" class="text-white">Acerca</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <h5>Soporte</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white">Centro de soporte</a></li>
+                    <li><a href="#" class="text-white">Devoluciones y Garantías</a></li>
+                    <li><a href="#" class="text-white">Contactar</a></li>
+                    <li><a href="#" class="text-white">Política de privacidad</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <h5>Redes sociales</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white"><i class="bi bi-instagram"></i> Instagram</a></li>
+                    <li><a href="#" class="text-white"><i class="bi bi-twitter"></i> Twitter</a></li>
+                    <li><a href="#" class="text-white"><i class="bi bi-facebook"></i> Facebook</a></li>
+                    <li><a href="#" class="text-white"><i class="bi bi-youtube"></i> YouTube</a></li>
+                </ul>
+            </div>
         </div>
-
-        <table>
-            <tr>
-                <th>Por que comprar </th>
-                <th>Quienes somos </th>
-                <th>Contactar</th>
-                <th>Otros</th>
-                <th>Comunidad</th>
-            </tr>
-            <tr>
-                <td>
-
-                    <a href="#">Cómo comprar</a><br>
-                    <a href="#">Formas de pago</a><br>
-                    <a href="#">Gastos de envío</a><br>
-                    <a href="#">Cupones descuento</a><br>
-                    <a href="#">Preguntas frecuentes</a><br>
-                    <a href="#">Opiniones de clientes</a><br>
-                    <a href="#">Tarjetas regalo</a><br>
-
-                </td>
-                <td>
-
-                    <a href="#">Compromisos</a><br>
-                    <a href="#">Nuestras tiendas</a><br>
-                    <a href="#">Nuestras Marcas</a><br>
-                    <a href="#">Condiciones de compra</a><br>
-                    <a href="#">Afiliados</a><br>
-                    <a href="#">Aviso legal</a><br>
-                    <a href="#">Privacidad</a>
-
-
-                </td>
-                <td>
-                    <a href="#">Centro de soporte</a><br>
-                    <a href="#">Devoluciones y Garantías</a><br>
-                    <a href="#">Wiki PcComponentes</a><br>
-                    <a href="#">Opina y Gana</a><br>
-                    <a href="#">Publicidad</a><br>
-                    <a href="#">Trabaja con nosotros</a>
-                    <a href="#">Politicas de cookies</a>
-
-
-                </td>
-
-                <td>
-                    <a href="#">Replay </a><br>
-                    <a href="#">Black Friday </a><br>
-                    <a href="#">Cyber Monday </a><br>
-                    <a href="#">PcDays </a><br>
-                    <a href="#">Marketplace </a><br>
-                    <a href="#">Servicio logistico Fulfilment </a><br>
-                    <a href="#">Servicio de reparaciones </a><br>
-                    <a href="#">Concurso </a><br>
-                    <a href="#">Cita asistencia tecnica </a><br>
-                    <a href="#">Responsabilidad social </a><br>
-
-
-                </td>
-
-
-                <td>
-
-
-                    <a href="#">Instagram</a><br>
-                    <a href="#">Twitter</a><br>
-                    <a href="#">Facebook</a><br>
-                    <a href="#">Telegram</a><br>
-                    <a href="#">Youtube</a><br>
-                    <a href="#">TikTok</a><br>
-                    <a href="#">Twitch</a>
-                </td>
-            </tr>
-        </table>
+        <div class="text-center">
+            <p class="small mb-0">&copy; 2024 Tu Tienda de Figuras. Todos los derechos reservados.</p>
+        </div>
     </div>
-
+</footer>
 
 
 
