--- a/src/main/resources/static/css/comprarCarrito.css
+++ b/src/main/resources/static/css/comprarCarrito.css
@@ -10,27 +10,27 @@
     padding: 20px;
     overflow-y: auto;
     z-index: 9999;
-    color: black; /* Cambia el color del texto a negro */
+    color: black;
 }
 
 #btnComprar {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background-color: #000000; /* Color de fondo */
-    color: #fff; /* Color del texto */
-    border: none; /* Sin borde */
-    padding: 10px 20px; /* Relleno interno */
-    border-radius: 5px; /* Borde redondeado */
-    cursor: pointer; /* Cursor al pasar el ratón */
-    transition: background-color 0.3s ease; /* Transición suave */
-    outline: none; /* Sin contorno al hacer clic */
+    background-color: #000000;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    outline: none;
 }
 
 #btnComprar:hover {
-    background-color: #0056b3; /* Color de fondo al pasar el ratón */
+    background-color: #0056b3;
 }
 
 #btnComprar:active {
-    transform: translateY(1px); /* Efecto de clic */
+    transform: translateY(1px);
 }
