--- a/src/main/resources/templates/html/dragonBall/index.html
+++ b/src/main/resources/templates/html/dragonBall/index.html
@@ -13,19 +13,61 @@
     <link rel="icon" href="/imagen/pestaña/corona.jpg" >
 
 
-   <!-- <style>
+    <style>
 
+            /* Estilo para el texto del nombre de usuario */
 
-        body {
-            background-image: url("https://wallpapers-clan.com/wp-content/uploads/2024/03/dragon-ball-goku-sparks-gif-preview-desktop-wallpaper.gif");
-            background-size: cover; /* Asegura que la imagen cubra toda el área del fondo */
-            background-position: center; /* Centra la imagen */
-            background-repeat: no-repeat; /* Evita que la imagen se repita */
-            background-attachment: fixed; /* Hace que la imagen de fondo permanezca fija */
-            height: 100vh; /* Asegura que el cuerpo tenga al menos la altura de la ventana */
-            margin: 0; /* Elimina márgenes alrededor del cuerpo */
+        footer {
+            background-color: #343a40;
+            color: #ffffff;
+            padding: 20px 0;
         }
-    </style>-->
+
+        footer h5 {
+            margin-bottom: 20px;
+        }
+
+        footer ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        footer ul li {
+            margin-bottom: 10px;
+        }
+
+        footer ul li a {
+            color: #ffffff;
+            text-decoration: none;
+            transition: color 0.2s;
+        }
+
+        footer ul li a:hover {
+            color: #f8f9fa;
+        }
+
+        footer .text-center {
+            border-top: 1px solid #495057;
+            margin-top: 20px;
+            padding-top: 20px;
+        }
+
+
+
+        /*
+                body {
+                    background-image: url("https://wallpapers-clan.com/wp-content/uploads/2024/03/dragon-ball-goku-sparks-gif-preview-desktop-wallpaper.gif");
+                    background-size: cover; !* Asegura que la imagen cubra toda el área del fondo *!
+                    background-position: center; !* Centra la imagen *!
+                    background-repeat: no-repeat; !* Evita que la imagen se repita *!
+                    background-attachment: fixed; !* Hace que la imagen de fondo permanezca fija *!
+                    height: 100vh; !* Asegura que el cuerpo tenga al menos la altura de la ventana *!
+                    margin: 0; !* Elimina márgenes alrededor del cuerpo *!
+                }*/
+
+
+    </style>
+
 </head>
 
 <body>   <header class="p-3 bg-dark text-white fixed-top ">
@@ -194,85 +236,47 @@
 
 
 
-    <div class="menu">
-        <div class="menuTitulo">
-            <h2>Menú</h2>
+<footer class="bg-dark text-white mt-4">
+    <div class="container py-4">
+        <div class="row">
+            <div class="col-lg-3 col-md-6 mb-4">
+                <h5>Acerca de</h5>
+                <p class="small">Somos una tienda dedicada a la venta de figuras de tus series favoritas. Nuestro objetivo es ofrecer productos de alta calidad y un excelente servicio al cliente.</p>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <h5>Enlaces rápidos</h5>
+                <ul class="list-unstyled">
+                    <li><a href="/inicio" class="text-white">Inicio</a></li>
+                    <li><a href="/caracteristicas" class="text-white">Características</a></li>
+                    <li><a href="/pagoEnca" class="text-white">Precios</a></li>
+                    <li><a href="/faqs" class="text-white">FAQs</a></li>
+                    <li><a href="/encabezado" class="text-white">Acerca</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <h5>Soporte</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white">Centro de soporte</a></li>
+                    <li><a href="#" class="text-white">Devoluciones y Garantías</a></li>
+                    <li><a href="#" class="text-white">Contactar</a></li>
+                    <li><a href="#" class="text-white">Política de privacidad</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <h5>Redes sociales</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white"><i class="bi bi-instagram"></i> Instagram</a></li>
+                    <li><a href="#" class="text-white"><i class="bi bi-twitter"></i> Twitter</a></li>
+                    <li><a href="#" class="text-white"><i class="bi bi-facebook"></i> Facebook</a></li>
+                    <li><a href="#" class="text-white"><i class="bi bi-youtube"></i> YouTube</a></li>
+                </ul>
+            </div>
         </div>
-
-        <table>
-            <tr>
-                <th>Por que comprar </th>
-                <th>Quienes somos </th>
-                <th>Contactar</th>
-                <th>Otros</th>
-                <th>Comunidad</th>
-            </tr>
-            <tr>
-                <td>
-
-                    <a href="#">Cómo comprar</a><br>
-                    <a href="#">Formas de pago</a><br>
-                    <a href="#">Gastos de envío</a><br>
-                    <a href="#">Cupones descuento</a><br>
-                    <a href="#">Preguntas frecuentes</a><br>
-                    <a href="#">Opiniones de clientes</a><br>
-                    <a href="#">Tarjetas regalo</a><br>
-
-                </td>
-                <td>
-
-                    <a href="#">Compromisos</a><br>
-                    <a href="#">Nuestras tiendas</a><br>
-                    <a href="#">Nuestras Marcas</a><br>
-                    <a href="#">Condiciones de compra</a><br>
-                    <a href="#">Afiliados</a><br>
-                    <a href="#">Aviso legal</a><br>
-                    <a href="#">Privacidad</a>
-
-
-                </td>
-                <td>
-                    <a href="#">Centro de soporte</a><br>
-                    <a href="#">Devoluciones y Garantías</a><br>
-                    <a href="#">Wiki PcComponentes</a><br>
-                    <a href="#">Opina y Gana</a><br>
-                    <a href="#">Publicidad</a><br>
-                    <a href="#">Trabaja con nosotros</a>
-                    <a href="#">Politicas de cookies</a>
-
-
-                </td>
-
-                <td>
-                    <a href="#">Replay </a><br>
-                    <a href="#">Black Friday </a><br>
-                    <a href="#">Cyber Monday </a><br>
-                    <a href="#">PcDays </a><br>
-                    <a href="#">Marketplace </a><br>
-                    <a href="#">Servicio logistico Fulfilment </a><br>
-                    <a href="#">Servicio de reparaciones </a><br>
-                    <a href="#">Concurso </a><br>
-                    <a href="#">Cita asistencia tecnica </a><br>
-                    <a href="#">Responsabilidad social </a><br>
-
-
-                </td>
-
-
-                <td>
-
-
-                    <a href="#">Instagram</a><br>
-                    <a href="#">Twitter</a><br>
-                    <a href="#">Facebook</a><br>
-                    <a href="#">Telegram</a><br>
-                    <a href="#">Youtube</a><br>
-                    <a href="#">TikTok</a><br>
-                    <a href="#">Twitch</a>
-                </td>
-            </tr>
-        </table>
+        <div class="text-center">
+            <p class="small mb-0">&copy; 2024 Tu Tienda de Figuras. Todos los derechos reservados.</p>
+        </div>
     </div>
+</footer>
 
 
 
