--- a/src/main/resources/templates/html/encabezado/caracteristicas.html
+++ b/src/main/resources/templates/html/encabezado/caracteristicas.html
@@ -217,6 +217,49 @@
 </div>
 </div>
 
+
+
+<footer class="bg-dark text-white mt-4">
+    <div class="container py-4">
+        <div class="row">
+            <div class="col-lg-3 col-md-6 mb-4">
+                <h5>Acerca de</h5>
+                <p class="small">Somos una tienda dedicada a la venta de figuras de tus series favoritas. Nuestro objetivo es ofrecer productos de alta calidad y un excelente servicio al cliente.</p>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <h5>Enlaces rápidos</h5>
+                <ul class="list-unstyled">
+                    <li><a href="/inicio" class="text-white">Inicio</a></li>
+                    <li><a href="/caracteristicas" class="text-white">Características</a></li>
+                    <li><a href="/pagoEnca" class="text-white">Precios</a></li>
+                    <li><a href="/faqs" class="text-white">FAQs</a></li>
+                    <li><a href="/encabezado" class="text-white">Acerca</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <h5>Soporte</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white">Centro de soporte</a></li>
+                    <li><a href="#" class="text-white">Devoluciones y Garantías</a></li>
+                    <li><a href="#" class="text-white">Contactar</a></li>
+                    <li><a href="#" class="text-white">Política de privacidad</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <h5>Redes sociales</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white"><i class="bi bi-instagram"></i> Instagram</a></li>
+                    <li><a href="#" class="text-white"><i class="bi bi-twitter"></i> Twitter</a></li>
+                    <li><a href="#" class="text-white"><i class="bi bi-facebook"></i> Facebook</a></li>
+                    <li><a href="#" class="text-white"><i class="bi bi-youtube"></i> YouTube</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="text-center">
+            <p class="small mb-0">&copy; 2024 Tu Tienda de Figuras. Todos los derechos reservados.</p>
+        </div>
+    </div>
+</footer>
 <script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}" ></script>
 <script src="/js/buscar.js"></script>
 <script src="/js/favoritos.js"></script>
