--- a/src/main/resources/templates/html/dragonBall/index.html
+++ b/src/main/resources/templates/html/dragonBall/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/dragonBall.css">
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/figurasEstilosInicio.css">
+
     <link rel="icon" href="/imagen/pestaña/corona.jpg" >
 
 
@@ -253,6 +254,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
 <script src="/js/buscar.js"></script>
+<script src="/js/monstrarCarrito.js"></script>
 </body>
 
 </html>
