--- a/src/main/resources/templates/html/iniciarSesion/index.html
+++ b/src/main/resources/templates/html/iniciarSesion/index.html
@@ -70,7 +70,7 @@
                 <label class="form-check-label" for="recuerdame">Recuérdame</label>
             </div>
 
-                <button class="btn btn-primary-custom w-100 mb-3" type="submit">Iniciar sesión</button>
+                <button id="btn-inicioSesion"  class="btn btn-primary-custom w-100 mb-3" type="submit">Iniciar sesión</button>
 
 
             <div class="d-flex justify-content-between">
@@ -92,6 +92,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
