--- a/src/main/resources/templates/html/inspeccionar/inspeccionar.html
+++ b/src/main/resources/templates/html/inspeccionar/inspeccionar.html
@@ -113,12 +113,16 @@
                 No hay stock
             </div>
             <div th:unless="${figura.getStock() <= 0}">
-                <button type="button" class="boton btn-comprar"
-                        data-figura-id="${figura.id}"
-                        data-figura-nombre="${figura.nombre}"
-                        data-figura-precio="${figura.precio}">
-                    Añadir al carrito
-                </button>
+
+
+                    <button type="button" class="addToCartBtn"
+                            th:data-figura-id="${figura.id}"
+                            th:data-figura-nombre="${figura.nombre}"
+                            th:data-figura-precio="${figura.precio}">
+                        Añadir al carrito
+                    </button>
+
+
             </div>
         </div>
     </div>
@@ -130,6 +134,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+    <script src="/js/monstrarCarrito.js"></script>
     <script src="/js/carritoComprar.js"></script>
 </body>
 
