--- a/src/main/resources/templates/html/dragonBall/index.html
+++ b/src/main/resources/templates/html/dragonBall/index.html
@@ -255,6 +255,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
 <script src="/js/buscar.js"></script>
 <script src="/js/monstrarCarrito.js"></script>
+<script src="/js/borrarCokieSesion.js"></script>
+
 </body>
 
 </html>
