--- a/src/main/resources/templates/html/encabezado/acercaEnca.html
+++ b/src/main/resources/templates/html/encabezado/acercaEnca.html
@@ -202,5 +202,7 @@
 <script src="/js/buscar.js"></script>
 <script src="/js/favoritos.js"></script>
 <script src="/js/cambiarDeColorCabecera.js"></script>
+<script src="/js/borrarCokieSesion.js"></script>
+<script src="/js/monstrarCarrito.js"></script>
 </body>
 </html>
