--- a/src/main/resources/templates/html/footer/privacidad.html
+++ b/src/main/resources/templates/html/footer/privacidad.html
@@ -182,5 +182,7 @@
 <script src="/js/favoritos.js"></script>
 <script src="/js/carritoComprar.js"></script>
 <script src="/js/cambiarDeColorCabecera.js"></script>
+<script src="/js/borrarCokieSesion.js"></script>
+<script src="/js/monstrarCarrito.js"></script>
 </body>
 </html>
