--- a/src/main/resources/templates/html/iniciarSesion/index.html
+++ b/src/main/resources/templates/html/iniciarSesion/index.html
@@ -15,15 +15,18 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f8f9fa;
+            position: relative;
+            z-index: 1;
         }
         .login-container {
             max-width: 400px;
             width: 100%;
             padding: 20px;
             border-radius: 10px;
-            background-color: #fff;
+            background-color: rgba(255, 255, 255, 0.8); /* Fondo semitransparente */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            position: relative;
+            z-index: 2;
         }
         .login-header {
             text-align: center;
@@ -43,11 +46,26 @@
             border-color: #007bff;
             box-shadow: none;
         }
+        /* Estilo para el video de fondo */
+        .video-background {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1;
+        }
     </style>
 </head>
 
 <body>
 
+<!-- Video de fondo -->
+<video class="video-background" autoplay loop muted>
+    <source src="https://cdn.pixabay.com/video/2023/02/16/150883-799711528_large.mp4" type="video/mp4">
+    Tu navegador no soporta el elemento de video.
+</video>
 
 <div class="login-page">
     <div class="login-container">
@@ -70,23 +88,14 @@
                 <label class="form-check-label" for="recuerdame">Recuérdame</label>
             </div>
 
-                <button id="btn-inicioSesion"  class="btn btn-primary-custom w-100 mb-3" type="submit">Iniciar sesión</button>
+            <button id="btn-inicioSesion"  class="btn btn-primary-custom w-100 mb-3" type="submit">Iniciar sesión</button>
 
-
-            <div class="d-flex justify-content-between">
-                <a href="/olvido-contrasena" class="text-muted">He olvidado mi contraseña</a>
-         <!--       <form th:action="@{/usuario/signup/entrar}" method="post">
-                </form>-->
-
-
-
-            </div>
         </form>
-        <a th:href="@{/usuario/signup}" class="text-muted">Crear cuenta</a>
+        <div th:if="${#authorization.expression('!isAuthenticated()')}">
+            <a th:href="@{/usuario/signup}" class="text-muted">Crear cuenta</a>
+        </div>
         <hr>
-        <button class="btn btn-outline-dark w-100">
-            <i class="bi bi-google me-2"></i>Iniciar sesión con Google
-        </button>
+
     </div>
 </div>
 
