--- a/src/main/resources/templates/html/inspeccionar/inspeccionar.html
+++ b/src/main/resources/templates/html/inspeccionar/inspeccionar.html
@@ -136,6 +136,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
     <script src="/js/monstrarCarrito.js"></script>
     <script src="/js/carritoComprar.js"></script>
+    <script src="/js/borrarCokieSesion.js"></script>
+
 </body>
 
 </html>
