--- a/src/main/resources/templates/html/dragonBall/index.html
+++ b/src/main/resources/templates/html/dragonBall/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/dragonBall.css">
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/figurasEstilosInicio.css">
+    <link rel="stylesheet" href="/css/comprarCarrito.css">
 
     <link rel="icon" href="/imagen/pestaña/corona.jpg" >
 
@@ -256,6 +257,7 @@
 <script src="/js/buscar.js"></script>
 <script src="/js/monstrarCarrito.js"></script>
 <script src="/js/borrarCokieSesion.js"></script>
+
 
 </body>
 
