--- a/src/main/resources/templates/html/novedad/index.html
+++ b/src/main/resources/templates/html/novedad/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/figurasEstilosInicio.css">
     <link rel="icon" href="/imagen/pestaña/corona.jpg" >
+    <link rel="stylesheet" href="/css/comprarCarrito.css">
 </head>
 
 <body>
