--- a/src/main/resources/templates/html/onePiece/index.html
+++ b/src/main/resources/templates/html/onePiece/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/figurasEstilosInicio.css">
     <link rel="icon" href="/imagen/pestaña/corona.jpg" >
+    <link rel="stylesheet" href="/css/comprarCarrito.css">
 </head>
 
 <body>
@@ -93,6 +94,8 @@
                 <h2>Carrito de Compras</h2>
                 <ul id="cartItems"></ul>
                 <div id="cartTotal">Total: $0.00</div>
+
+                <a href="/comprar"></a>
                 <button id="btnComprar">Comprar</button>
             </div>
             <!--   Son para que te cuentes los inicios de sesion est atambien puesto arriba-->
